@@ -9,6 +9,7 @@ desktop-base (6.0.1) UNRELEASED; urgency=low
     - use the desktop-background alternative in KDE config.
   * Makefile:
     - re-introduce kdeglobals, this time for KDE4.
+    - install KDE4 stuff in /usr/share/kde4/*.
     - don't install -moodin ksplash themes.
     - install spacefun ksplash theme.
   * ksplash/*-moodin dropped, moodin is a KDE3 theme engine.
@@ -16,7 +17,7 @@ desktop-base (6.0.1) UNRELEASED; urgency=low
     - use spacefun theme
   * ksplash/spacefun added
 
- -- Yves-Alexis Perez <corsac@debian.org>  Thu, 18 Nov 2010 15:19:49 +0100
+ -- Yves-Alexis Perez <corsac@debian.org>  Sat, 20 Nov 2010 16:02:14 +0100
 
 desktop-base (6.0.0) unstable; urgency=low
 
